--- a/index.html
+++ b/index.html
@@ -8,3 +8,15 @@
     <p>Hello, World</p>
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Who am I?</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    Jean Valjean
+    55 Rue Plumet
+    Amonate, VA 24601
+  </body>
+</html>
