--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>LETBD agarzasuarez</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <p>Hello, World</p>
-  </body>
-</html>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Who am I?</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    Jean Valjean <br>
-    55 Rue Plumet <br>
-    Amonate, VA 24601 <br>
+
+  <h1> La historia de LETBD</h1>
+
+  <h2>Background</h2>
+
+  <h2>Founders<h2>
+
+
   </body>
 </html>
