--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     but it would be cool if it were.
     </p>
 
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <a href="FILL_IN">
+      <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
 
     <h2>Background</h2>
 
