--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     </p>
 
     <p>
+      <a href="https://twitter.com/learnenough" target="_blank"
+      style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png">
+      </a>
+      You should follo Learn Enough on Twitter
+      <a href="htpps://twitter.com/learnenough"
+        target="_blank" rel="noopener">here</a>
+    </p>
+
+    <p>
     HTML was created by the original "web developer", computer scientist
     <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Tim_Berners-Lee</a>.
     Its not true that Sir Tim invented HTML in order to share pictures of his cat,
