Add Twitter link,Logo

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <p>
       <a href="https://twitter.com/learnenough" target="_blank"
-      style="text-decoration: none;">
-        <img src="images/small_twitter_logo.png">
+      rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png"> alt="Twitter Logo">
       </a>
-      You should follo Learn Enough on Twitter
+      You should follow Learn Enough on Twitter
       <a href="htpps://twitter.com/learnenough"
         target="_blank" rel="noopener">here</a>
     </p>
