--- a/tags.html
+++ b/tags.html
@@ -85,18 +85,28 @@
         <td>strong</td>
         <td>make strong text</td>
         <td><code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code></td>
+        <td><strong>at least a billion people</strong></td>
       </tr>
       <tr>
         <td><code>a</code></td>
         <td>anchor</td>
         <td>make hyperlink</td>
         <td><code>&lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;</code></td>
+        <td><em>www.learnenough.com</em></td>
       </tr>
       <tr>
         <td><code>img</code></td>
         <td>image</td>
         <td>include an image</td>
         <td><code>&lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code></td>
+        <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt</td>
+      </tr>
+      <tr>
+        <td><code>code</code></td>
+        <td>code</td>
+        <td>code text</td>
+        <td><code>&lt;code text&gt;</code></td>
+        <td><em>code text</em></td>
       </tr>
     </table>
 
