--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
       <a href="https://twitter.com/learnenough" target="_blank"
       rel="noopener" style="text-decoration: none;">
-        <img src="images/small_twitter_logo.png"> alt="Twitter Logo">
+        <img src="images/small_twitter_logo.png" alt="Twitter Logo">
       </a>
       You should follow Learn Enough on Twitter
       <a href="htpps://twitter.com/learnenough"
